--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "daisyui": "^2.52.0",
     "firebase": "^9.22.1",
     "react": "^18.2.0",
